tests/success/complex_expression.lang
fn main(): i32 {
    let foo: i16 = 5;
    let bar: i32 = 10;
    let foo_addr: *i16 = &foo;
    let bar_addr: *i32 = &bar;
    let bar_addr_addr: **i32 = &bar_addr;
    return foo + *foo_addr * **bar_addr_addr;
}
